--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -1101,36 +1101,20 @@
                             Name:<input type="text" class="sheet-border-bottom sheet-no-border" name="attr_assetname"
                                 value="">
                             <input type="text" class="sheet-no-border" name="attr_assetdesc" value="">
-                        </div>
-                        <div>
-                            <table>
-                                <tr>
-                                    <td>
-                                        <input type="checkbox" class="sheet-asset-skill" name="attr_companionassetcheckbox1">
-                                    </td>
-                                    <td>
-                                        <textarea type="text" class="sheet-asset-skill"
-                                            name="attr_assetskill1"></textarea>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <input type="checkbox" class="sheet-asset-skill" name="attr_companionassetcheckbox2">
-                                    </td>
-                                    <td><textarea type="text" class="sheet-asset-skill"
-                                            name="attr_assetskill2"></textarea>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <input type="checkbox" class="sheet-asset-skill" name="attr_companionassetcheckbox3">
-                                    </td>
-                                    <td>
-                                        <textarea type="text" class="sheet-asset-skill"
-                                            name="attr_assetskill3"></textarea>
-                                    </td>
-                                </tr>
-                            </table>
+                        </div>    
+                        <div class="sheet-flex-wrapper">
+                            <div class="sheet-flex-container">
+                                <input type="checkbox" class="sheet-asset-skill" name="attr_companionassetcheckbox1">
+                                <textarea type="text" class="sheet-asset-skill" name="attr_assetskill1"></textarea>
+                            </div>
+                            <div class="sheet-flex-container">
+                                <input type="checkbox" class="sheet-asset-skill" name="attr_companionassetcheckbox2">
+                                <textarea type="text" class="sheet-asset-skill" name="attr_assetskill2"></textarea>
+                            </div>
+                            <div class="sheet-flex-container">
+                                <input type="checkbox" class="sheet-asset-skill" name="attr_companionassetcheckbox3">
+                                <textarea type="text" class="sheet-asset-skill" name="attr_assetskill3"></textarea>
+                            </div>
                         </div>
                         <div class="sheet-health-box-wrapper">
                             <input type="checkbox" class="sheet-asset-health0" name="attr_AssetHealthBox0">
@@ -1250,38 +1234,19 @@
                                     name="attr_assetstatinput" value="">
                             </div>
                         </div>
-                        <div>
-                            <table>
-                                <tr>
-                                    <td>
-                                        <input type="checkbox" class="sheet-asset-skill"
-                                            name="attr_pathassetcheckbox1">
-                                    </td>
-                                    <td>
-                                        <textarea type="text" class="sheet-asset-skill"
-                                            name="attr_assetskill1"></textarea>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <input type="checkbox" class="sheet-asset-skill"
-                                            name="attr_pathassetcheckbox2">
-                                    </td>
-                                    <td><textarea type="text" class="sheet-asset-skill"
-                                            name="attr_assetskill2"></textarea>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <input type="checkbox" class="sheet-asset-skill"
-                                            name="attr_pathassetcheckbox3">
-                                    </td>
-                                    <td>
-                                        <textarea type="text" class="sheet-asset-skill"
-                                            name="attr_assetskill3"></textarea>
-                                    </td>
-                                </tr>
-                            </table>
+                        <div class="sheet-flex-wrapper">
+                            <div class="sheet-flex-container">
+                                <input type="checkbox" class="sheet-asset-skill" name="attr_pathassetcheckbox1">
+                                <textarea type="text" class="sheet-asset-skill" name="attr_assetskill1"></textarea>
+                            </div>
+                            <div class="sheet-flex-container">
+                                <input type="checkbox" class="sheet-asset-skill" name="attr_pathassetcheckbox2">
+                                <textarea type="text" class="sheet-asset-skill" name="attr_assetskill2"></textarea>
+                            </div>
+                            <div class="sheet-flex-container">
+                                <input type="checkbox" class="sheet-asset-skill" name="attr_pathassetcheckbox3">
+                                <textarea type="text" class="sheet-asset-skill" name="attr_assetskill3"></textarea>
+                            </div>
                         </div>
                         <input type="checkbox" class="sheet-path-wealth sheet-hidden-flex"
                             name="attr_assetwealth"></input>
@@ -1342,38 +1307,22 @@
                                     class="sheet-combat-talent-requirement-area sheet-no-border sheet-asset-skill"
                                     name="attr_assetcombattalentrequirement" value=""></textarea>
                             </div>
-                            <div>
-                                <table>
-                                    <tr>
-                                        <td>
-                                            <input type="checkbox" class="sheet-asset-skill"
-                                                name="attr_combattalentassetcheckbox1" checked>
-                                        </td>
-                                        <td>
-                                            <textarea type="text" class="sheet-asset-skill"
-                                                name="attr_assetskill1"></textarea>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <input type="checkbox" class="sheet-asset-skill"
-                                                name="attr_combattalentassetcheckbox2" value="">
-                                        </td>
-                                        <td><textarea type="text" class="sheet-asset-skill"
-                                                name="attr_assetskill2"></textarea>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <input type="checkbox" class="sheet-asset-skill"
-                                                name="attr_combattalentassetcheckbox3" value="">
-                                        </td>
-                                        <td>
-                                            <textarea type="text" class="sheet-asset-skill"
-                                                name="attr_assetskill3"></textarea>
-                                        </td>
-                                    </tr>
-                                </table>
+                            <div class="sheet-flex-wrapper">
+                                <div class="sheet-flex-container">
+                                    <input type="checkbox" class="sheet-asset-skill" name="attr_combattalentassetcheckbox1" checked>
+                                    <textarea type="text" class="sheet-asset-skill"
+                                        name="attr_assetskill1"></textarea>
+                                </div>
+                                <div class="sheet-flex-container">
+                                    <input type="checkbox" class="sheet-asset-skill" name="attr_combattalentassetcheckbox2">
+                                    <textarea type="text" class="sheet-asset-skill"
+                                        name="attr_assetskill2"></textarea>
+                                </div>
+                                <div class="sheet-flex-container">
+                                    <input type="checkbox" class="sheet-asset-skill" name="attr_combattalentassetcheckbox3">
+                                    <textarea type="text" class="sheet-asset-skill"
+                                        name="attr_assetskill3"></textarea>
+                                </div>
                             </div>
 
                             <input type="checkbox" class="sheet-combat-talent-armour sheet-hidden-flex" name="attr_assetcombattalentarmour">
@@ -1413,38 +1362,20 @@
                         <option value="visage">Visage</option>
                         <option value="ward">Ward</option>
                     </select>
-                    <div>
-                        <table>
-                            <tr>
-                                <td>
-                                    <input type="checkbox" class="sheet-asset-skill"
-                                        name="attr_ritualassetcheckbox1" value="" checked>
-                                </td>
-                                <td>
-                                    <textarea type="text" class="sheet-asset-skill"
-                                        name="attr_assetskill1"></textarea>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <input type="checkbox" class="sheet-asset-skill"
-                                        name="attr_ritualassetcheckbox2" value="">
-                                </td>
-                                <td><textarea type="text" class="sheet-asset-skill"
-                                        name="attr_assetskill2"></textarea>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <input type="checkbox" class="sheet-asset-skill"
-                                        name="attr_ritualassetcheckbox3" value="">
-                                </td>
-                                <td>
-                                    <textarea type="text" class="sheet-asset-skill"
-                                        name="attr_assetskill3"></textarea>
-                                </td>
-                            </tr>
-                        </table>
+                    <div class="sheet-flex-wrapper">
+                        <div class="sheet-flex-container">
+                            <input type="checkbox" class="sheet-asset-skill" name="attr_ritualassetcheckbox1" checked>
+                            <textarea type="text" class="sheet-asset-skill" name="attr_assetskill1"></textarea>
+                        </div>
+                        <div class="sheet-flex-container">
+                            <input type="checkbox" class="sheet-asset-skill" name="attr_ritualassetcheckbox2">
+                            <textarea type="text" class="sheet-asset-skill"
+                                name="attr_assetskill2"></textarea>
+                        </div>
+                        <div class="sheet-flex-container">
+                            <input type="checkbox" class="sheet-asset-skill" name="attr_ritualassetcheckbox3">
+                            <textarea type="text" class="sheet-asset-skill" name="attr_assetskill3"></textarea>
+                        </div>
                     </div>
                     <input type="checkbox" class="sheet-ritual-track sheet-hidden-flex"
                         name="attr_assetritualtracks"></input>
