(assets) triage Kindred asset

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -1100,7 +1100,7 @@
                         <div class="sheet-asset-description">
                             <div class="sheet-asset-write-in">Name:<input type="text" class="sheet-border-bottom sheet-no-border" name="attr_assetname"value=""></div>
                             <div class="sheet-asset-description-text">Your cat takes down its prey.</div>
-                        </div>    
+                        </div>
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_companionassetcheckbox1">
@@ -1143,7 +1143,7 @@
                         <div class="sheet-asset-description">
                             <div class="sheet-asset-write-in">Name:<input type="text" class="sheet-border-bottom sheet-no-border" name="attr_assetname"value=""></div>
                             <div class="sheet-asset-description-text">Your spider uncovers secrets.</div>
-                        </div>    
+                        </div>
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_companionassetcheckbox1">
@@ -1186,7 +1186,7 @@
                         <div class="sheet-asset-description">
                             <div class="sheet-asset-write-in">Name:<input type="text" class="sheet-border-bottom sheet-no-border" name="attr_assetname"value=""></div>
                             <div class="sheet-asset-description-text">Your hawk can aid you while it is aloft.</div>
-                        </div>    
+                        </div>
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_companionassetcheckbox1">
@@ -1225,7 +1225,7 @@
                         <div class="sheet-asset-description">
                             <div class="sheet-asset-write-in">Name:<input type="text" class="sheet-border-bottom sheet-no-border" name="attr_assetname"value=""></div>
                             <div class="sheet-asset-description-text">You and your horse ride as one.   </div>
-                        </div>    
+                        </div>
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_companionassetcheckbox1">
@@ -1272,7 +1272,7 @@
                         <div class="sheet-asset-description">
                             <div class="sheet-asset-write-in">Name:<input type="text" class="sheet-border-bottom sheet-no-border" name="attr_assetname"value=""></div>
                             <div class="sheet-asset-description-text">Your hound is your steadfast companion. </div>
-                        </div>    
+                        </div>
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_companionassetcheckbox1">
@@ -1315,13 +1315,16 @@
                         <div class="sheet-asset-description">
                             <div class="sheet-asset-write-in">Name:<input type="text" class="sheet-border-bottom sheet-no-border" name="attr_assetname"value=""></div>
                             <div class="sheet-asset-description-text">Your friend stands by you.</div>
-                        </div>    
+                        </div>
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_companionassetcheckbox1">
-                                <div class="sheet-asset-ability"><b>abilityed:</b> When you make a move outside of combat aided by your companion’s expertise, add +1. Expertise:</div>
-                                <input type="text" class="sheet-border-bottom sheet-no-border" name="attr_assetexpertise"
-                                value="">
+                                <div class="sheet-asset-ability"><b>Skilled:</b> When you make a move outside of combat aided by your companion’s expertise, add +1. 
+                                    <div class="sheet-asset-ability-write-in">
+                                        Expertise:
+                                        <input type="text" class="sheet-border-bottom sheet-no-border" name="attr_assetexpertise" value="">
+                                    </div>
+                                </div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_companionassetcheckbox2">
@@ -1360,7 +1363,7 @@
                         <div class="sheet-asset-description">
                             <div class="sheet-asset-write-in">Name:<input type="text" class="sheet-border-bottom sheet-no-border" name="attr_assetname"value=""></div>
                             <div class="sheet-asset-description-text">Your mammoth walks a resolute path.</div>
-                        </div>    
+                        </div>
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_companionassetcheckbox1">
@@ -1407,7 +1410,7 @@
                         <div class="sheet-asset-description">
                             <div class="sheet-asset-write-in"><div class="sheet-asset-write-in">                            Name:<input type="text" class="sheet-border-bottom sheet-no-border" name="attr_assetname"value=""></div></div>
                             <div class="sheet-asset-description-text"><div class="sheet-asset-description-text">                            Your owl soars through the darkness.</div></div>
-                        </div>    
+                        </div>
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_companionassetcheckbox1">
@@ -1446,7 +1449,7 @@
                         <div class="sheet-asset-description">
                             <div class="sheet-asset-write-in"><div class="sheet-asset-write-in">                            Name:<input type="text" class="sheet-border-bottom sheet-no-border" name="attr_assetname"value=""></div></div>
                             <div class="sheet-asset-description-text"><div class="sheet-asset-description-text">                            Your raven heeds your call.</div></div>
-                        </div>    
+                        </div>
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_companionassetcheckbox1">
@@ -1481,7 +1484,7 @@
                         <div class="sheet-asset-description">
                             <div class="sheet-asset-write-in"><div class="sheet-asset-write-in">                            Name:<input type="text" class="sheet-border-bottom sheet-no-border" name="attr_assetname"value=""></div></div>
                             <div class="sheet-asset-description-text"><div class="sheet-asset-description-text">                            Your wyvern won’t devour you. For now.</div></div>
-                        </div>    
+                        </div>
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_companionassetcheckbox1">
@@ -4410,7 +4413,7 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <input type="checkbox" class="sheet-asset-combat-talent sheet-hidden-flex" name="attr_assetcombattalent">
                 <div class="sheet-combat-talent sheet-hidden-flex">
                     <select name="attr_assetdropdowncombattalent" class="sheet-sub-dropdown">
@@ -4989,7 +4992,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>                  
+                    </div>
                 </div>
 
                 <input type="checkbox" class="sheet-asset-ritual sheet-hidden-flex" name="attr_assetritual">
