(assets) fix some double-replaced html

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -1371,7 +1371,7 @@
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_companionassetcheckbox2">
-                                <div class="sheet-asset-ability">Beast of burden: When you make a move which requires you to roll +supply, you may instead roll +your mammoth’s health.</div>
+                                <div class="sheet-asset-ability"><b>Beast of burden:</b> When you make a move which requires you to roll +supply, you may instead roll +your mammoth’s health.</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_companionassetcheckbox3">
@@ -1408,8 +1408,8 @@
                     <input type="checkbox" class="sheet-owl sheet-hidden-flex" name="attr_assetcompaniondivowl">
                     <div class="sheet-owl sheet-hidden-flex">
                         <div class="sheet-asset-description">
-                            <div class="sheet-asset-write-in"><div class="sheet-asset-write-in">                            Name:<input type="text" class="sheet-border-bottom sheet-no-border" name="attr_assetname"value=""></div></div>
-                            <div class="sheet-asset-description-text"><div class="sheet-asset-description-text">                            Your owl soars through the darkness.</div></div>
+                            <div class="sheet-asset-write-in">Name:<input type="text" class="sheet-border-bottom sheet-no-border" name="attr_assetname"value=""></div>
+                            <div class="sheet-asset-description-text">Your owl soars through the darkness.</div>
                         </div>
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
@@ -1447,8 +1447,8 @@
                     <input type="checkbox" class="sheet-raven sheet-hidden-flex" name="attr_assetcompaniondivraven">
                     <div class="sheet-raven sheet-hidden-flex">
                         <div class="sheet-asset-description">
-                            <div class="sheet-asset-write-in"><div class="sheet-asset-write-in">                            Name:<input type="text" class="sheet-border-bottom sheet-no-border" name="attr_assetname"value=""></div></div>
-                            <div class="sheet-asset-description-text"><div class="sheet-asset-description-text">                            Your raven heeds your call.</div></div>
+                            <div class="sheet-asset-write-in">Name:<input type="text" class="sheet-border-bottom sheet-no-border" name="attr_assetname"value=""></div>
+                            <div class="sheet-asset-description-text">Your raven heeds your call.</div>
                         </div>
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
@@ -1482,8 +1482,8 @@
                     <input type="checkbox" class="sheet-young-wyvern sheet-hidden-flex" name="attr_assetcompaniondivyoung-wyvern">
                     <div class="sheet-young-wyvern sheet-hidden-flex">
                         <div class="sheet-asset-description">
-                            <div class="sheet-asset-write-in"><div class="sheet-asset-write-in">                            Name:<input type="text" class="sheet-border-bottom sheet-no-border" name="attr_assetname"value=""></div></div>
-                            <div class="sheet-asset-description-text"><div class="sheet-asset-description-text">                            Your wyvern won’t devour you. For now.</div></div>
+                            <div class="sheet-asset-write-in">Name:<input type="text" class="sheet-border-bottom sheet-no-border" name="attr_assetname"value=""></div>
+                            <div class="sheet-asset-description-text">Your wyvern won’t devour you. For now.</div>
                         </div>
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
