added missing div tags

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -1531,7 +1531,7 @@
                 <input type="checkbox" class="sheet-asset-path sheet-hidden-flex" name="attr_assetpath">
                 <div class="sheet-path sheet-hidden-flex">
                     <select name="attr_assetDropdownPath" class="sheet-sub-dropdown sheet-path-dropdown">
-                        <option value="" disabled selected></option>
+                        <option value="" disabled selected>Select</option>
                         <option value="alchemist">Alchemist</option>
                         <option value="animal-kin">Animal-kin</option>
                         <option value="banner-sworn">Banner-sworn</option>
@@ -1589,15 +1589,15 @@
                         <div class="sheet-flex-wrapper">
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_pathassetcheckbox1" checked>
-                                <div>When you make a move to pacify, calm, control, aid, or fend off an animal (or an animal or beast companion), add +1 and take +1 momentum on a hit.</div>
+                                <div class="sheet-asset-ability">When you make a move to pacify, calm, control, aid, or fend off an animal (or an animal or beast companion), add +1 and take +1 momentum on a hit.</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_pathassetcheckbox2">
-                                <div type="text">You may add or upgrade an animal or beast companion asset for 1 fewer experience. Once you mark all their abilities, you may <em>Forge a Bond</em> with them and take an automatic strong hit. When you do, mark a bond twice and take 1 experience.</div>
+                                <div class="sheet-asset-ability">You may add or upgrade an animal or beast companion asset for 1 fewer experience. Once you mark all their abilities, you may <em>Forge a Bond</em> with them and take an automatic strong hit. When you do, mark a bond twice and take 1 experience.</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-asset-ability" name="attr_pathassetcheckbox3">
-                                <div type="text">Once per fight, when you leverage your animal or beast companion to make a move, reroll any dice. On a hit, take +1 momentum.</div>
+                                <div class="sheet-asset-ability">Once per fight, when you leverage your animal or beast companion to make a move, reroll any dice. On a hit, take +1 momentum.</div>
                             </div>
                         </div>
                     </div>
@@ -2614,7 +2614,7 @@
                 <input type="checkbox" class="sheet-asset-ritual sheet-hidden-flex" name="attr_assetritual">
                 <div class="sheet-ritual sheet-hidden-flex">
                     <select name="attr_assetdropdownritual" class="sheet-sub-dropdown">
-                        <option value="" disabled selected></option>
+                        <option value="" disabled selected>Select</option>
                         <option value="augur">Augur</option>
                         <option value="awakening">Awakening</option>
                         <option value="bind">Bind</option>
